# AnotherTermLite

./: .gitignore  LICENSE  README.md  settings.gradle
FastArrayUtils/src/main/: AndroidManifest.xml
FastArrayUtils/src/main/java/green_green_avk/fastarrayutils/: FastArrayUtils.java
FastArrayUtils/src/main/jni/: CMakeLists.txt  main.cpp
PtyProcess/src/main/: AndroidManifest.xml
PtyProcess/src/main/java/green_green_avk/ptyprocess/: PtyProcess.java
PtyProcess/src/main/jni/: CMakeLists.txt  forkpty_compat.cpp  main.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: main.cpp
app/src/main/res/drawable/: bg_padding1_tiles.xml  ic_mouse_cursor.xml  ic_screen_mouse_cursor.xml  ic_select_expr.xml  ic_select_lines.xml  ic_select_lines_rect.xml  ic_select_rect.xml
app/src/main/res/layout/: activity_about.xml  activity_console.xml  activity_favorite_editor.xml  buffer_size_dialog.xml  dialog_news.xml  fragment_doze.xml  local_params_content.xml  sessions_entry.xml  telnet_params_content.xml
app/src/main/res/menu/: menu_console.xml  menu_sessions.xml
app/src/main/res/values/: about.xml  attrs-HtmlTextView.xml  attrs-consolescreenview.xml  attrs-extkeyboard.xml  attrs-extkeyboardview.xml  attrs-screenmouseview.xml  colors.xml  default_settings.xml  dimens.xml  info.xml  info_shell_env.xml  info_termsh.xml  license.xml  menu_attrs.xml  news.xml  strings.xml  termsh.xml
app/src/main/res/xml/: console_keyboard.xml  console_keyboard_wide.xml  pref_terminal.xml
gradle/wrapper/: gradle-wrapper.properties
(+67 files in other folders)
